deployment/poly-increment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polymetrie-increment
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: polymetrie-increment
  template:
    metadata:
      labels:
        app: polymetrie-increment
    spec:
      containers:
      - name: polymetrie-increment
        image:  hamza125/polymetrie-increment:latest 
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: polymetrie-increment-service
spec:
  selector:
    app: polymetrie-increment
  ports:
    - protocol: TCP
      port: 5000  # Port du service Kubernetes
      targetPort: 5000  # Port de votre application

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polymetrie-increment-ingress
spec:
  rules:
  - host: www.polymetrie-increment.com  # Votre nom de domaine
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polymetrie-increment-service
            port:
              number: 5000  # Port défini dans le service.yaml
