deployment/poly-increment/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: polymetrie
spec:
  rules:
    - host: polymetrie.teamg.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polymetrie-polymetrie-chart
                port:
                  number: 5000
